solc_mutator_ossfuzz_seed_corpus/test_sol/test_724dfc8953e1a5744686238eeebe10b8771a131cbbdf3fb0a2e2932448fb469f_504823a1b0618529de19c0cefdbc89fa2a25b141_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
error er0(function (address payable, address payable, function () external   returns (bytes memory, uint216)) internal   returns (bytes4) ep0, bytes26 ep1);
struct St0 {
  uint160 el0;
}

==== Source: su1.sol ====
library L0 {
  event ev0();
  function f0(function () internal   returns (bool) i0,string memory i1) external    returns(uint160 o0,int104 o1,int56 o2)
  {
  }
  using L0 for *;
  event ev1(uint120 indexed ep0, bytes19  ep1) anonymous;
  function f1(bytes2 i0) private   
  {
    if (true)
    {
    }
  }
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40
  }
}
using L0 for uint;
using L0 for uint;
using L0 for uint;
using L0 for uint;
using L0 for uint;
pragma solidity >= 0.0.0;
// ----
// TypeError 3417: (su0.sol:36-167): Internal or recursive type is not allowed as error parameter type.
// TypeError 4103: (su1.sol:42-82): Internal type is not allowed for public or external functions.
